--- a/missionPost.html
+++ b/missionPost.html
@@ -17,6 +17,9 @@
     <!-- Google Icons (Material Design)-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Link to the api keys for your firebase project -->
+    <script src="scripts/firebaseAPI.js"></script>
+
     <style>
         body {
             background-color: rgb(190, 190, 190);
