changed styling for Login.html to match the others

--- a/Login.html
+++ b/Login.html
@@ -44,16 +44,27 @@
         html {
             padding: 0px;
             margin: 0px;
-            background-color: rgb(190, 190, 190);
         }
 
         body {
-            background-color: rgb(190, 190, 190);
+            background: linear-gradient(#0F2027, #203A43, #2C5364);
         }
 
         .container h1 {
             margin-right: 0 auto;
             margin-left: 0 auto;
+        }
+
+        footer {
+            background-color:#BBB;
+            height: 8vh;
+        }
+
+        .mb-0 {
+            font-size: 3rem;
+            font-weight: bold;
+            color:black;
+            padding-top: 4rem;
         }
 
     </style>
@@ -81,8 +92,11 @@
 
 
         <div class="container">
-            <h1 class="display-4">Welcome to BBY02 APP!</h1>
-            <h1 class="display-4">Let's Login!</h1>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">Welcome to BBY02 APP! 
+                    Let's Login
+                </p>
+              </blockquote>
         </div>
         <br>
         <br>
@@ -91,8 +105,7 @@
 
         <br>
 
-
-        <footer class="navbar justify-content-evenly bg-info fixed-bottom">
+        <footer class="navbar justify-content-evenly fixed-bottom">
             <i class="material-icons">home</i>
             <i class="material-icons">info</i>
             <i class="material-icons"><span class="material-icons-two-tone">
