--- a/Home Page.html
+++ b/Home Page.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Link to the api keys for your firebase project -->
-    <script src="scripts/firebaseAPI.js"></script>
+    <script src="scripts/firebaseAPI_TEAMBBY02.js"></script>
 
     <style>
         html {
