--- a/toggleSlots.html
+++ b/toggleSlots.html
@@ -21,9 +21,13 @@
     <script src="./scripts/firebaseAPI_TEAMBBY02.js"></script>
 
     <style>
+body {
+    
+}
+
         table td {
-            width: 100px;
-            height: 100px;
+            width: 88px;
+            height: 88;
             text-align: center;
             vertical-align: middle;
             background-color: #ccc;
@@ -41,23 +45,53 @@
 
 <body>
 
-    <table cellpadding="0" cellspacing="0" id="our_table">
+    <table cellpadding="25" cellspacing="0" id="our_table">
         <tr>
-            <td>a</td>
-            <td>b</td>
-            <td>c</td>
+            <td>Monday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
         </tr>
         <tr>
-            <td>d</td>
-            <td>e</td>
-            <td>f</td>
+            <td>Tuesday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
         </tr>
         <tr>
-            <td>g</td>
-            <td>h</td>
-            <td>i</td>
+            <td>Wednesday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
+        </tr>
+
+        <tr>
+            <td>Thursday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
+        </tr>
+        <tr>
+            <td>Saturday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
+        </tr>
+        <tr>
+            <td>Sunday</td>
+            <td>Morning</td>
+            <td>Afternoon</td>
+            <td>Evening</td>
         </tr>
     </table>
+
+
 
     <script>
 
@@ -88,14 +122,14 @@
 
 
 
-        function saveSlot() {
-            var slotRef = db.collection("Hikes");
+        // function saveSlot() {
+        //     var slotRef = db.collection("Hikes");
 
-            slotRef.add({
-                Morning: "false",
-                Afternoon: "false",   
-                Evening: "false"
-            }
+        //     slotRef.add({
+        //         Morning: "false",
+        //         Afternoon: "false",   
+        //         Evening: "false"
+        //     }
 
 
 
