updated login, postDetails, API script and toggleSlots

--- a/toggleSlots.html
+++ b/toggleSlots.html
@@ -21,9 +21,7 @@
     <script src="./scripts/firebaseAPI_TEAMBBY02.js"></script>
 
     <style>
-body {
-    
-}
+        body {}
 
         table td {
             width: 88px;
@@ -47,10 +45,10 @@ body {
 
     <table cellpadding="25" cellspacing="0" id="our_table">
         <tr>
-            <td>Monday</td>
-            <td>Morning</td>
-            <td>Afternoon</td>
-            <td>Evening</td>
+            <td> Monday</td>
+            <td id="morning">Morning</td>
+            <td id="afternoon">Afternoon</td>
+            <td id="evening">Evening</td>
         </tr>
         <tr>
             <td>Tuesday</td>
@@ -130,6 +128,8 @@ body {
         //         Afternoon: "false",   
         //         Evening: "false"
         //     }
+
+
 
 
 
