--- a/Home Page.html
+++ b/Home Page.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+
+    <style>
+        body {
+            overflow-y: hidden;
+        }
+    </style>
+
     <meta charset="utf-8">
     <title>Home Page</title>
 
@@ -86,7 +93,9 @@
 
     </div>
 
-
+    <br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br>
+    <br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br>
+    <br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br>
 
     <!--------------------------------------------------->
     <!-- Your Javascript Libraries and scripts go here -->
