Linked all HTML pages

--- a/Availabilities (seek help).html
+++ b/Availabilities (seek help).html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mission Board</title>
+    <title>Availabilities</title>
 
-    <meta name="comp1800 boilerplate code" content="Mission Board">
-    <meta name="author" content="JiahuanQi">
+    <meta name="comp1800 boilerplate code" content="Availabilities">
+    <meta name="author" content="BBY02">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -139,7 +139,7 @@
         <br>
 
         <header class="headerset">
-            <h1>Misson Board</h1>
+            <h1>Availability</h1>
             <center>
                 <hr style="width: 90%;">
             </center>
@@ -287,13 +287,13 @@
 
 
 
+        <a href="postDetails.html">
+            <button id="button1" type="button" class="btn btn-outline-dark">
+                <p class="pset"><b>Back</b></p>
+            </button>
+        </a>
 
-        <button id="button1" type="button" class="btn btn-outline-dark">
-            <p class="pset"><b>Back</b></p>
-        </button>
-
-
-        <a href=".html">
+        <a href="missionPosted.html">
             <button id="button2" type="button" class="btn btn-outline-dark">
                 <p class="pset"><b>Post</b></p>
             </button>
@@ -304,7 +304,9 @@
 
 
         <footer class="navbar justify-content-evenly fixed-bottom">
-            <i class="material-icons">home</i>
+            <a href="main.html">
+                <i class="material-icons">home</i>
+            </a>
             <i class="material-icons">info</i>
             <i class="material-icons"><span class="material-icons-two-tone">
                     volunteer_activism
