--- a/Availabilities (seek task).html
+++ b/Availabilities (seek task).html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mission Board</title>
+    <title>Availabilities</title>
 
-    <meta name="comp1800 boilerplate code" content="Mission Board">
-    <meta name="author" content="JiahuanQi">
+    <meta name="comp1800 boilerplate code" content="Availabilities">
+    <meta name="author" content="BBY02">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -149,7 +149,7 @@
         <br>
         
         <header class="headerset">
-            <h1>Misson Board</h1>
+            <h1>Availability</h1>
             <center><hr style="width: 90%;"></center>
             </header>
 
