--- a/postDetails.html
+++ b/postDetails.html
@@ -129,14 +129,18 @@
         <div class="d-flex justify-content-end">
             <button type="button" class="btn btn-lg btn-primary pull-right" onclick="saveUserInfo()">Save </button>
             &nbsp; &nbsp;
+            <a href="Availabilities (seek help).html">
             <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Next </button>
+            </a>
         </div>
     </form>
 
 
 
     <footer class="navbar justify-content-evenly fixed-bottom">
-        <i class="material-icons">home</i>
+        <a href="main.html">
+            <i class="material-icons">home</i>
+        </a>
         <i class="material-icons">info</i>
         <i class="material-icons"><span class="material-icons-two-tone">
                 volunteer_activism
