--- a/missionPosted.html
+++ b/missionPosted.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Secondary Page</title>
+    <title>Mission Posted!</title>
 
-    <meta name="comp1800 boilerplate code" content="Secondary Page">
-    <meta name="author" content="JiahuanQi">
+    <meta name="comp1800 boilerplate code" content="Mission Posted! page">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,7 +19,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Link to the api keys for your firebase project -->
-    <script src="scripts/firebaseAPI.js"></script>
+    <script src="scripts/firebaseAPI_TEAMBBY02.js"></script>
 
     <style>
         html {
@@ -39,40 +38,17 @@
         #button1 {
 
             position: absolute;
-            top: 33%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 300px;
             height: 27%;
             border-radius: 50%;
-            background-color:white
+            background-color: white
         }
 
 
-        #button2 {
-
-            position: absolute;
-            top: 66%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            height: 27%;
-            border-radius: 50%;
-            background-color:white
-        }
-
-        #button3 {
-
-            position: absolute;
-            top: 85%;
-            left: 33%;
-            transform: translate(-50%, -50%);
-            width: 10%;
-            height: 5%;
-            background-color:white
-        }
-
-        .pset{
+        .pset {
             font-size: 30px;
         }
 
@@ -80,7 +56,6 @@
             background-color: #BBB;
             height: 8vh;
         }
-
     </style>
 </head>
 
@@ -92,42 +67,16 @@
 
     <div class="container">
 
-        <br>
-        <br>
-
-        <!-- obtained from https://mdbootstrap.com/docs/standard/forms/search/-->
-        <div class="input-group rounded">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="fas fa-search"></i>
-            </span>
-        </div>
-
-        
-
-        <br>
-        <br>
+        <button id="button1" type="button" class="btn btn-outline-dark">
+            <p class="pset"><b>Mission Posted!</b></p>
+        </button>
 
 
-        <button id="button1" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Hire An Adventurer</b></p></button>
+        <footer class="navbar justify-content-evenly fixed-bottom">
+            <a href="main.html">
+                <i class="material-icons">home</i>
+            </a>
 
-        <br>
-        <br>
-
-        <button id="button2" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Mission Board</b></p></button>
-
-        <br>
-        <br>
-
-        <button id="button3" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Back</b></p></button>
-
-
-        <br>
-
-
-        <footer class="navbar justify-content-evenly fixed-bottom" >
-            <i class="material-icons">home</i>
             <i class="material-icons">info</i>
             <i class="material-icons"><span class="material-icons-two-tone">
                     volunteer_activism
@@ -148,8 +97,9 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
-
+        </script>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
