Updated postDetails: it should now be able to write to Cloud Firestore

--- a/Availabilities (seek help).html
+++ b/Availabilities (seek help).html
@@ -162,13 +162,13 @@
             </tr>
             <tr>
                 <td Class="tableTime">8:00-9:00AM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M800"></td>
+                <td id="T800"></td>
+                <td id="W800"></td>
+                <td id="Th800"></td>
+                <td id="F800"></td>
+                <td id="S800"></td>
+                <td id="Su800"></td>
             </tr>
             <tr>
                 <td Class="tableTime">9:00-10:00AM</td>
@@ -261,27 +261,6 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
-                <td Class="tableTime">7:00-8:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td Class="tableTime">8:00-9:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
 
         </table>
 
@@ -308,9 +287,9 @@
                 <i class="material-icons">home</i>
             </a>
             <i class="material-icons">info</i>
-            <i class="material-icons"><span class="material-icons-two-tone">
-                    volunteer_activism
-                </span></i>
+            <a href="missionBoard.html">
+                <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+            </a>
             <i class="material-icons">settings</i>
         </footer>
 
@@ -326,6 +305,12 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script>
+
+
+
+//document.getElementsByClassName(isHighlighted)
+
+
 
         $(function () {
             var isMouseDown = false,
