--- a/Availabilities (seek task).html
+++ b/Availabilities (seek task).html
@@ -353,14 +353,21 @@
 
 
 
-        // function saveSlot() {
-        //     var slotRef = db.collection("Hikes");
+        // NEED TO WORK ON 
 
-        //     slotRef.add({
-        //         Morning: "false",
-        //         Afternoon: "false",   
-        //         Evening: "false"
-        //     }
+        function saveSlot() {
+            var slotRef = db.collection("Posts");
+
+            const arrayOfAvailabilities = [];
+
+            arrayOfAvailabilities.forEach(td => { if (document.getElementsByClassName("highlighted") == true}  push);
+
+            }
+            slotRef.add({
+                Morning: "false",
+                Afternoon: "false",   
+                Evening: "false"
+            }
 
 
 
