--- a/main.html
+++ b/main.html
@@ -100,7 +100,7 @@
 
         <div>
             <button id="button1" type="button">
-                <h2> <b> Team Meeting </b> </h2>
+                <h2> <b> Host Team Meeting </b> </h2>
             </button>
 
             <br>
@@ -111,20 +111,16 @@
                     <h2> <b> Get Involved </b></h2>
                 </button>
             </a>
-
         </div>
 
-        <br>
-        <br>
-
-        <br>
+        <br><br><br>
 
         <footer class="navbar justify-content-evenly fixed-bottom">
             <i class="material-icons">home</i>
             <i class="material-icons">info</i>
-            <i class="material-icons"><span class="material-icons-two-tone">
-                    volunteer_activism
-                </span></i>
+            <a href="missionBoard.html">
+            <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+            </a>
             <i class="material-icons">settings</i>
         </footer>
 
