--- a/missionBoard.html
+++ b/missionBoard.html
@@ -84,85 +84,59 @@
 
     <div class="container">
 
-        <br>
-        <br>
+        <br><br><br>
 
 
-        <h1>Latest Posts</h1>
+        <h1>Mission Board</h1>
+
+        <br><br>
 
         <table class="table table-striped table-dark">
             <thead>
                 <tr>
-                    <th scope="col">Events</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Hour</th>
-                    <th scope="col">Minute</th>
+                    <th scope="col"><h3>Most Recent</h3></th>
+                    <th scope="col"><h3>View Details</h3></th>
                 </tr>
             </thead>
+            <br>
             <tbody>
                 <tr>
-                    <td id="title"></td>
-                    <td id="description"></td>
-                    <td id="hour"></td>
-                    <td id="minute"></td>
+                    <td> <h4> Looking for english tutor</h4> </td>
+                    <td> <a href="Availabilities (seek help).html">
+                        <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td> <h4>Seeking help for club promotion </h4></td>
+                    <td> <a href="Availabilities (seek help).html">
+                        <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td> <h4>Looking for a campus friend </h4></td>
+                    <td> <a href="Availabilities (seek help).html">
+                        <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td> <h4>Can someone help me understand node.js / asyncronous functions in JavaScript?!</h4></td>
+                    <td> <a href="Availabilities (seek help).html">
+                        <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
+                        </a>
+                    </td>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+
             </tbody>
         </table>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
 
         <footer class="navbar justify-content-evenly fixed-bottom">
-            <i class="material-icons">home</i>
+            <a href="main.html">
+                <i class="material-icons">home</i>
+            </a>
             <i class="material-icons">info</i>
             <i class="material-icons"><span class="material-icons-two-tone">
                     volunteer_activism
@@ -184,10 +158,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <script>
-       
+
 
         //TEST
         //
