--- a/missionPosted.html
+++ b/missionPosted.html
@@ -78,9 +78,9 @@
             </a>
 
             <i class="material-icons">info</i>
-            <i class="material-icons"><span class="material-icons-two-tone">
-                    volunteer_activism
-                </span></i>
+            <a href="missionBoard.html">
+                <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+            </a>
             <i class="material-icons">settings</i>
         </footer>
 
