--- a/secondary.html
+++ b/secondary.html
@@ -45,7 +45,7 @@
             width: 300px;
             height: 27%;
             border-radius: 50%;
-            background-color:white
+            background-color: white
         }
 
 
@@ -58,7 +58,7 @@
             width: 300px;
             height: 27%;
             border-radius: 50%;
-            background-color:white
+            background-color: white
         }
 
         #button3 {
@@ -69,10 +69,10 @@
             transform: translate(-50%, -50%);
             width: 10%;
             height: 5%;
-            background-color:white
+            background-color: white
         }
 
-        .pset{
+        .pset {
             font-size: 30px;
         }
 
@@ -80,7 +80,6 @@
             background-color: #BBB;
             height: 8vh;
         }
-
     </style>
 </head>
 
@@ -95,48 +94,44 @@
         <br>
         <br>
 
-        <!-- obtained from https://mdbootstrap.com/docs/standard/forms/search/-->
-        <div class="input-group rounded">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="fas fa-search"></i>
-            </span>
-        </div>
-
-        
 
         <br>
         <br>
 
         <a href="postDetails.html">
-        <button id="button1" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Hire An Adventurer</b></p></button>
+            <button id="button1" type="button" class="btn btn-outline-dark">
+                <p class="pset"><b>Hire An Adventurer</b></p>
+            </button>
         </a>
 
         <br>
         <br>
         <a href="missionBoard.html">
-        <button id="button2" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Mission Board</b></p></button>
+            <button id="button2" type="button" class="btn btn-outline-dark">
+                <p class="pset"><b>View Mission Board</b></p>
+            </button>
         </a>
         <br>
 
         <br>
 
         <a href="main.html">
-        <button id="button3" type="button" class="btn btn-outline-dark"><p class= "pset"><b>Back</b></p></button>
+            <button id="button3" type="button" class="btn btn-outline-dark">
+                <p class="pset"><b>Back</b></p>
+            </button>
         </a>
 
         <br>
 
 
-        <footer class="navbar justify-content-evenly fixed-bottom" >
+        <footer class="navbar justify-content-evenly fixed-bottom">
             <a href="main.html">
-            <i class="material-icons">home</i>
+                <i class="material-icons">home</i>
             </a>
             <i class="material-icons">info</i>
-            <i class="material-icons"><span class="material-icons-two-tone">
-                    volunteer_activism
-                </span></i>
+            <a href="missionBoard.html">
+                <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+            </a>
             <i class="material-icons">settings</i>
         </footer>
 
@@ -153,9 +148,9 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </script>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
